# Manipulator_UR5_Project

./: .gitmodules  Doxyfile  README.md  colab link  completeJob.sh  conversion.sh  init.sh  launchDocker.sh  screenrc  setup.sh  setupBena.sh  setupFIRST.sh  setupGazebo.sh  setupGripper.sh  setupMatteo.sh  setupVRiz.sh  setupVRizBena.sh  setupVRizsh  sim.launch.py  start.sh  testCamera.sh  testMove  testMove.sh  testSpawner.sh  yolo.sh
Latex Source/: main.tex  report.tex
Move/: kin_communication.h  kinematics.cpp  kinematics.h  main.cpp
html/: _armur5_8msg_8m.html  _c_o_n_t_r_i_b_u_t_i_n_g_8md.html  _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8zh-_c_n_8md.html  activations_8py.html  activations_8py.js  annotated.html  annotated_dup.js  augmentations_8py.html  augmentations_8py.js  autoanchor_8py.html  autoanchor_8py.js  autobatch_8py.html  autobatch_8py.js  benchmarks_8py.html  benchmarks_8py.js  calc__medium__value_8cpp.html  calc__medium__value_8cpp.js  calc__medium__value_8h.html  calc__medium__value_8h.js  calc__medium__value_8h_source.html  callbacks_8py.html  callbacks_8py.js  class_conversion_client-members.html  class_conversion_client.html  class_conversion_client.js  class_gripper_communicator-members.html  class_gripper_communicator.html  class_gripper_communicator.js  class_gripper_controller-members.html  class_gripper_controller.html  class_image_camera-members.html  class_image_camera.html  class_image_camera.js  class_joint_receiver-members.html  class_joint_receiver.html  class_joint_receiver.js  class_my_vector-members.html  class_my_vector.html  class_my_vector.js  (+850 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_24.js  all_25.js  all_26.js  all_27.js  (+136 more)
install/: local_setup.sh  setup.sh
latex/: _armur5_8msg_8m.tex  _c_o_n_t_r_i_b_u_t_i_n_g_8md.tex  _r_e_a_d_m_e_8zh-_c_n_8md.tex  activations_8py.tex  annotated.tex  augmentations_8py.tex  autoanchor_8py.tex  autobatch_8py.tex  benchmarks_8py.tex  calc__medium__value_8cpp.tex  calc__medium__value_8h.tex  calc__medium__value_8h_source.tex  callbacks_8py.tex  class_conversion_client.tex  class_gripper_communicator.tex  class_gripper_controller.tex  class_image_camera.tex  class_joint_receiver.tex  class_my_vector.tex  class_points_camera.tex  class_table_transform_service.tex  class_trajectory_action_client.tex  class_yolo_client.tex  classexport_1_1i_o_s_model.tex  classify_2predict_8py.tex  classify_2train_8py.tex  classify_2val_8py.tex  classmodels_1_1common_1_1_auto_shape.tex  classmodels_1_1common_1_1_bottleneck.tex  classmodels_1_1common_1_1_bottleneck_c_s_p.tex  classmodels_1_1common_1_1_c3.tex  classmodels_1_1common_1_1_c3_ghost.tex  classmodels_1_1common_1_1_c3_s_p_p.tex  classmodels_1_1common_1_1_c3_t_r.tex  classmodels_1_1common_1_1_c3x.tex  classmodels_1_1common_1_1_classify.tex  classmodels_1_1common_1_1_concat.tex  classmodels_1_1common_1_1_contract.tex  classmodels_1_1common_1_1_conv.tex  classmodels_1_1common_1_1_cross_conv.tex  (+268 more)
log/: latest_build  latest_list
robotics_project_ws/block_spawner_ws/: Blocks.csv  Blocks.numbers  CMakeLists.txt  package.xml
robotics_project_ws/block_spawner_ws/include/: block_spawner.h
robotics_project_ws/block_spawner_ws/msg/: BlockPosition.msg  BlockPositionArray.msg
robotics_project_ws/block_spawner_ws/src/: block_spawn.cpp
robotics_project_ws/camera_ws/: CMakeLists.txt  package.xml
robotics_project_ws/camera_ws/include/: calc_medium_value.h  image.h  points.h
robotics_project_ws/camera_ws/src/: calc_medium_value.cpp  image.cpp
robotics_project_ws/camera_ws/srv/: DepthGet.srv
robotics_project_ws/move_ws/: CMakeLists.txt  package.xml
robotics_project_ws/move_ws/include/: kin_communication.h  kinematics.h  path.h
robotics_project_ws/move_ws/src/: kin_communication.cpp  kinematics.cpp  main.cpp  path.cpp
robotics_project_ws/src/camera_ws/: CMakeLists.txt  package.xml  visual.py  visual_old.py
robotics_project_ws/src/camera_ws/include/: calc_medium_value.h  points.h  transform_image.h
robotics_project_ws/src/camera_ws/src/: calc_medium_value.cpp  image.cpp  points.cpp  transform_image.cpp
robotics_project_ws/src/camera_ws/srv/: 3Dto2D.srv  Conversion.srv  DepthGet.srv
robotics_project_ws/src/complete_job_ws/: CMakeLists.txt  complete_job.cpp  package.xml
robotics_project_ws/src/complete_job_ws/include/: complete_job-old.h  complete_job.h
robotics_project_ws/src/complete_job_ws/src/: complete_job-old.cpp  complete_job.cpp  main.cpp
robotics_project_ws/src/move_ws/: CMakeLists.txt  package.xml
robotics_project_ws/src/move_ws/include/: kin_communication.h  kinematics.h  path.h
robotics_project_ws/src/move_ws/src/: kin_communication-old.cpp  kin_communication.cpp  kinematics.cpp  main.cpp  path.cpp
robotics_project_ws/src/move_ws/srv/: Moving.srv
robotics_project_ws/src/vision_ws/: CMakeLists.txt  package.xml  setup.cfg  setup.py
robotics_project_ws/src/vision_ws/launch/: detection.py
robotics_project_ws/src/vision_ws/msg/: Boundstruct.msg  boundstruct.msg
robotics_project_ws/src/vision_ws/src/: main.cpp
robotics_project_ws/src/vision_ws/srv/: Boundingbox.srv  boundingbox.srv
robotics_project_ws/src/vision_ws/vision_ws/: detection-old.py  detection.py  process.py
robotics_project_ws/src/vision_ws_msgs/: CMakeLists.txt  package.xml
robotics_project_ws/src/vision_ws_msgs/srv/: Boundingbox.srv  Convert2din3d.srv
ros2_ur5_interface/: CMakeLists.txt  package.xml
ros2_ur5_interface/config/: ur_controllers.yaml
ros2_ur5_interface/gripper/: rotation.script
ros2_ur5_interface/launch/: interface.launch.py  sim.launch.py
ros2_ur5_interface/models/: block_1.urdf.xacro  desk.urdf.xacro  soft_robotics_gripper.xacro  ur_gz.urdf.xacro
ros2_ur5_interface/models/meshes/: desk.stl  link2.stl
ros2_ur5_interface/scripts/: ros2.sh
ros2_ur5_interface/src/: gripper_service.cpp  publish_trajectory_node.cpp
(+37 files in other folders)
