<?xml version="1.0"?>
<package format="3">
  <name>camera_ws</name>
  <version>1.0.0</version>
  <description>Camera Image Acquisition</description>
  <maintainer email="umatteogottardelli@gmail.com">Matteo Gottardelli</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>control_msgs</depend>
  <depend>OpenCV</depend>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
