<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>complete_job_ws</name>
  <version>1.0.0</version>
  <description>COMPLETE JOB</description>
  <maintainer email="matteogottardelli@gmail.com">matteogottardelligmail.com</maintainer>
  <license>TODO: License declaration</license>
  <depend>rclcpp</depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <build_depend>camera_ws</build_depend>
  <exec_depend>camera_ws</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
