<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vision_ws</name>
  <version>1.0.0</version>
  <description>Vision Processing Detection</description>
  <maintainer email="matteogottardelli@gmail.com">matteogottardelligmail.com</maintainer>
  <license>TODO: License declaration</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>ament_python</build_depend>
    <build_depend>vision_ws_msgs</build_depend>  <!-- Depend on vision_ws_msgs -->
    <exec_depend>rclpy</exec_depend>
    <exec_depend>vision_ws_msgs</exec_depend>
    <export>
      <build_type>ament_python</build_type>
    </export>
</package>
